completed readme, doc and factory
